[gd_scene load_steps=11 format=3 uid="uid://cogup7s4abebl"]

[ext_resource type="Shader" uid="uid://ok1rks65miaf" path="res://scenes/objects/shake.gdshader" id="1_f4wgc"]
[ext_resource type="Texture2D" uid="uid://724nnwuwcxd1" path="res://assets/game/Objects/basic_grass_biom_things.png" id="1_ivetc"]
[ext_resource type="Script" uid="uid://tx17e5ki4810" path="res://scenes/objects/trees/tree.gd" id="3_0ia52"]
[ext_resource type="PackedScene" uid="uid://cp7n1jr5pv1jj" path="res://scenes/components/item_spawner_component.tscn" id="6_6vpey"]
[ext_resource type="PackedScene" uid="uid://ncvpnwwp3euh" path="res://scenes/components/health_component.tscn" id="7_0ia52"]
[ext_resource type="PackedScene" uid="uid://b8l7pft54h460" path="res://scenes/components/hurt_component_2.tscn" id="7_you1t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6vpey"]
resource_local_to_scene = true
shader = ExtResource("1_f4wgc")
shader_parameter/shake_intensity = 0.0
shader_parameter/shake_speed = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6vpey"]
atlas = ExtResource("1_ivetc")
region = Rect2(32, 0, 64, 63)

[sub_resource type="CircleShape2D" id="CircleShape2D_0ia52"]
radius = 6.08276

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cbki"]
size = Vector2(20, 32)

[node name="LargeTree" type="Sprite2D"]
material = SubResource("ShaderMaterial_6vpey")
texture = SubResource("AtlasTexture_6vpey")
script = ExtResource("3_0ia52")
shake_intensity = 2.5
drop_id = &"100"
drops = Array[StringName]([&"strawberry", &"100"])

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 1025

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 22)
shape = SubResource("CircleShape2D_0ia52")

[node name="ItemSpawnerComponent" parent="." instance=ExtResource("6_6vpey")]
position = Vector2(0, 22)
spawn_radius_max = 20.0
spawn_radius_min = 1.0

[node name="HealthComponent" parent="." instance=ExtResource("7_0ia52")]
max_health = 5
invincibility_time = 0.0

[node name="HurtComponent2" parent="." instance=ExtResource("7_you1t")]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent2"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_3cbki")
